fix: CSS layout issues on small screens

--- a/src/components/Chatbox/Chatbox.module.css
+++ b/src/components/Chatbox/Chatbox.module.css
@@ -1,5 +1,5 @@
 
-@media (max-width:400px){
+@media (max-width:500px){
     .chatbox{
         max-width: 55%;
     }
